# server-website

./: .gitattributes  .gitignore  Dockerfile  LICENSE  docker-compose.yml
.github/workflows/: docker.yml  frontend.yml
backend/: .env.example  Cargo.toml  Rocket.toml.example
backend/.sqlx/: query-10a7dc098f81ad0fd7346a782e1ef4e2aad539a62f8b3bb43e64b6238704c5c8.json  query-195506435b70b52ae36d67951406b34d3621b06058f181e55fdb1aa2183d9913.json  query-1a9a5beefc8a4ff811b19aa08261bf2d4f55f05b0b88b73d0b581fc40fe414a6.json  query-28a0d878957fb6878bfc3673a0533c778a64adb0bfa5e982fd2f0ead814b502b.json  query-354fcfb7ebaee19964638f15e809bc324478e6492eba87a7b20289b367c069ac.json  query-4a890c8f6438b1cf63d5458e09318b0f78ea797070c61a93d9dbe8708af6df79.json  query-55b504c213807931ca4695b7483ec253477fb5960ac1afdaa1f59f398ffea206.json  query-640a3e4131ebb0a00146b2b7bd7dff1f4a2318e474f5b495b9aae7f0a1902a27.json  query-95b7096ce03dc0b47335909643ed7020142c1deff7006458d80e075eedc6ae1b.json  query-97bd552d13440e473fc0b14bace0fb4e178335ccaec0651a3c4fc729a563281a.json  query-d0bd80aaa726b39103bc894373f1fd55e1d83577cdb6d194dfb2d763efb2a0e0.json
backend/migrations/: 20240619235440_create_users_table.sql  20240619235451_users_table_drop_email_column.sql  20240619235617_users_table_add_admin_column.sql  20240619235704_session_system_init.sql  20240620165655_session_system_token_store.sql  20240620170106_session_system_expiry.sql  20240620172611_init.sql  20240623211640_fix_mc_uuid.sql  20240914144634_session_id_uuid.sql  20241006225837_banned_user_field.sql  20241008194750_unique_uuids.sql
backend/src/: app.rs  errors.rs  main.rs  minecraft.rs  session.rs  sessionManager.rs  session_manager.rs
frontend/: bun.lockb  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: Navbar.svelte  Panorama.svelte  Project.svelte  Skin.svelte  Status.svelte  Whitelist.svelte  WhitelistModal.svelte  data.ts  index.ts  (+3 more)
frontend/static/: model.fbx  player.glb  slim.glb
(+15 files in other folders)
