[package]
name = "contract-system"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
pterodactyl_api = "0.1.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_oauth2 = "0.5.0"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "tls-native-tls", "macros", "migrate", "chrono", "postgres" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["clock"] }
rand = "0.8.5"
