[package]
name = "railways-server-website"
version = "0.1.0"
edition = "2021"

[profile.release]
incremental = true

[dependencies]
dotenvy = "0.15.7"
pterodactyl_api = "0.1.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_oauth2 = "0.5.0"
sqlx = { version = "0.8.2", features = [ "runtime-tokio", "tls-native-tls", "macros", "migrate", "chrono", "postgres", "uuid" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.5", features = ["json"] }
thiserror = "1.0.61"
chrono = { version = "0.4.38", features = ["clock", "serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
